# finance_project

./: .gitignore  README.md  _POST_PRESENTATION_CLEANUP.md  exploiting_text.txt  main.py  pyproject.toml
.claude/: settings.json  settings.local.json
final/: 01_DataCollection.ipynb  03_Volatility_Forecasting.ipynb  06_Top1_Selection.ipynb  99_analyze.ipynb  99_explore.ipynb  99_run.ipynb  BL_EXPERIMENT_GUIDE.md  HMMRegimeAnalysis.ipynb  PROJECT_OVERVIEW.md  _add_interpretations_to_04.py  _build_06_top1_nb.py  _top1_decision_2026_05_08.md  bl_config.py  bl_functions.py  hmm_bayesian_q_실험계획.md  lstm_pipeline.py  재천_worklog.md
final_pt/: 01_DataCollection.ipynb  02b_LowVol_PortfolioSort.ipynb  02b_Low_Risk_Anomaly.ipynb  03a_LSTM_Optuna_GridSearch.ipynb  03b_Volatility_Forecasting.ipynb  04_BL_Walkforward.ipynb  05_Statistical_Validation.ipynb  05a_HMM_Regime.ipynb  05b_Analyze.ipynb  06_Regime_Analysis.ipynb  99_analyze.ipynb  99_explore.ipynb  99_lstm_statistics.ipynb  99_slot_effects.ipynb  BL_EXPERIMENT_GUIDE.md  PROJECT_OVERVIEW.md  README.md  _validation_report_2026_05_08.md  bl_config.py  bl_functions.py  bl_runner.py  master_table.py
streamlit_dashboard/: README.md  app.py  requirements.txt
vercel_deploy/: README.md
김윤서/: GDELT_레짐판별_설계.md  GDELT_쿼리_설계_보완.md  GDELT_활용방안.md  Step1_Data_Collection.ipynb  Step1_Data_Collection_yoonbeom.ipynb  Step2_EDA copy.ipynb  Step2_Preprocessing_EDA.ipynb  Step2_Preprocessing_yoonbeom.ipynb  Step3_GDELT_HMM_XGBoost_myun.ipynb  Step3_Portfolio_Optimization.ipynb  Step3_XGBoost_walkForward_yoonbeom.ipynb  decision_log_jaecheon.md  gdelt_ml_bigquery.ipynb  gdelt_ml_gdelt_library.ipynb  news_data.ipynb  stock_pivot.md  temp.ipynb  전체_프로젝트_프로세스.md
김재천/: GDELT.ipynb  ML_DataPrep_Example.ipynb  Step1_Data_Collection.ipynb  Step2_EDA copy.ipynb  gdelt_full_test.py  gdelt_test_result.txt  master_design.md  report_v3.md  yfinance_test.ipynb
김하연/: Step2_EDA copy.ipynb  stock_pivot.md
서윤범/: Objective_Black_Litterman_Summary.md  Step1_Data_Collection copy.ipynb  test.ipynb  (+8 more)
(+560 files in other folders)
