[project]
name = "da-portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "accelerate>=1.13.0",
    "beautifulsoup4>=4.12.0",
    "bertopic>=0.17.4",
    "bitsandbytes>=0.49.2; sys_platform == 'win32'",
    "catboost>=1.2.10",
    "curl-cffi>=0.14.0",
    "dotenv>=0.9.9",
    "fredapi>=0.5.2",
    "gdelt>=0.1.14",
    "google-cloud-bigquery>=3.41.0",
    "google-genai>=1.70.0",
    "graphviz>=0.21",
    "hdbscan>=0.8.42",
    "hmmlearn>=0.3.3",
    "imblearn>=0.0",
    "ipykernel>=7.1.0",
    "itables>=2.7.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "kagglehub>=0.4.1",
    "kiwipiepy>=0.23.1",
    "konlpy>=0.6.0",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "optuna>=4.8.0",
    "pandas<3",
    "pandas-datareader>=0.10.0",
    "pandas-gbq>=0.35.0",
    "pingouin>=0.5.5",
    "plotly>=6.5.2",
    "prophet>=1.3.0",
    "pydantic-ai>=1.77.0",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scikit-posthocs>=0.12.0",
    "scipy>=1.9",
    "seaborn>=0.13.2",
    "selenium>=4.41.0",
    "sentence-transformers>=5.3.0",
    "sentencepiece>=0.2.1",
    "squarify>=0.4.4",
    "statsmodels>=0.14.6",
    "streamlit>=1.53.0",
    "tabpfn>=2.0",
    "tabpy>=2.13.0",
    "torch>=2.1.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.5.0",
    "umap-learn>=0.5.11",
    "webdriver-manager>=4.0.2",
    "wordcloud>=1.9.6",
    "xgboost>=3.2.0",
    "xlrd>=2.0.2",
    "yfinance>=0.2.66",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu126", marker = "sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu126", marker = "sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
